<resources>
    <string name="app_name">Toeic Vocabulary Words</string>
    <string name="topic_img_description">illustration</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="change_avatar">Change avatar</string>
    <string name="rename">Rename</string>
    <string name="topic">Topic</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="open_navi_drawer">View you profile and setting</string>
    <string name="close_navi_drawer">Close you profile and setting</string>
    <string name="default_user_name">Default user name</string>
    <string name="learned_topic">Learned topic</string>
    <string name="topic_passed">Topic passed</string>
    <string name="learn">Learn</string>
    <string name="write">Write</string>
    <string name="speak">Speak</string>
    <string name="exam">Exam</string>
    <string name="game">Game</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="speaker">Speaker</string>
    <string name="pls_enter_text">Please enter text</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="pls_enter_your_name">Please enter your name</string>
    <string name="rename_successfully">Rename successfully</string>
    <string name="rename_user">Rename user</string>
    <string name="exit_game">Exit game</string>
    <string name="exit_game_confirm">Do you want to exit the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="result">Result</string>
    <string name="confirm">Confirm</string>

</resources>