<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_header_navi_drawer_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/setting" />
    </group>


    <group android:id="@+id/group2"
        android:checkableBehavior="single">

        <item android:title="@string/account"
            android:id="@+id/abc">
            <menu>
                <item
                    android:id="@+id/menu_header_navi_drawer_change_avatar"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/change_avatar" />

                <item
                    android:id="@+id/menu_header_navi_drawer_rename"
                    android:icon="@drawable/ic_menu_edit"
                    android:title="@string/rename" />
            </menu>
        </item>
    </group>

</menu>