<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dialog_layout_margin_side"
    android:layout_marginEnd="@dimen/dialog_layout_margin_side"
    android:background="@drawable/rounded_rectangle_item_20"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_title_height"
        android:background="@drawable/rounded_blue_rectangle_tl_tr_20"
        android:gravity="center"
        android:text="@string/exit_game"
        android:textColor="@color/white"
        android:textSize="@dimen/dialog_title_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_title_height"
        android:layout_marginTop="@dimen/dialog_item_margin_top"
        android:gravity="center"
        android:text="@string/exit_game_confirm"
        android:textColor="@color/normal_content_text_color"
        android:textSize="@dimen/dialog_title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dialog_item_margin_side"
        android:paddingTop="@dimen/dialog_item_margin_top"
        android:paddingEnd="@dimen/dialog_item_margin_side"
        android:paddingBottom="@dimen/dialog_item_margin_top">

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_blue_rectangle_20"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_blue_rectangle_20"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>